--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -739,7 +739,7 @@
   "item.simplyswords.wickpiercersworditem.tooltip1":                                                                    "Unique Effect: Flicker Fury",
   "item.simplyswords.wickpiercersworditem.tooltip2":                                                                    "Instill your mind with fury,",
   "item.simplyswords.wickpiercersworditem.tooltip3":                                                                    "gaining a significant bonus",
-  "item.simplyswords.wickpiercersworditem.tooltip4":                                                                    "to attack speed, and allowing",
+  "item.simplyswords.wickpiercersworditem.tooltip4":                                                                    "to attack speed and allowing",
   "item.simplyswords.wickpiercersworditem.tooltip5":                                                                    "each strike of Wickpiercer",
   "item.simplyswords.wickpiercersworditem.tooltip6":                                                                    "to hit twice for %ds.",
 
